--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,2 +1,33 @@
 {% extends "base.html" %}
 {% load static %}
+
+{% block content %}
+
+    {% for product in products %}
+        <h4>{{ product.category.display_name }}</h4>
+        <h3>{{ product.name }}</h3>
+        <h4>{{ product.full_size_display }}</h4>
+        <h5>{{ product.bolt_pattern }}</h5>
+        <h4>{{ product.price }} Eur</h4>
+    {% endfor %}
+    <div class="row">
+        <div class="col-md-1 d-sm-none d-md-block">
+        </div>
+        <div class="col-12 col-md-11">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                {% for product in products %}
+                <div class="col">
+                <div class="card">
+                    <img src="{{ product.image }}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
