--- a/templates/base.html
+++ b/templates/base.html
@@ -24,11 +24,11 @@
     {% block corecss %}
     <!-- Bootstrap CSS -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
-    />
+    >
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     {% endblock %}
     
@@ -43,15 +43,10 @@
     ></script>
     <!-- Bootstrap JS with Popper -->
     <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous">
+    </script>
     <!-- jQuery -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
@@ -67,20 +62,22 @@
     
     <title>WheelerDealer | HOME</title>
   </head>
-  <header class="container-fluid fixed-top bg-brown">
+  <body>
+    <header class="container-fluid fixed-top bg-brown">
 
-  </header>
+    </header>
 
-  {% if messages %}
-  <div class="message-container"></div>
-  {% endif %}
+    {% if messages %}
+    <div class="message-container"></div>
+    {% endif %}
 
-  {% block page_header %}
-  {% endblock %}
-  
-  {% block content %}
-  {% endblock %}
-  
-  {% block postloadjs %}
-  {% endblock %}
+    {% block page_header %}
+    {% endblock %}
+    
+    {% block content %}
+    {% endblock %}
+    
+    {% block postloadjs %}
+    {% endblock %}
+  </body>
 </html>
