Finished invoice setup with complete models and signals

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -47,6 +47,7 @@
                                 {% else %}
                                     <p class="card-text">-</p>
                                 {% endif %}
+                                <h4><i class="fa-solid fa-euro-sign"></i> {{ product.purchase_price }}</h4>
                                 <h4><i class="fa-solid fa-euro-sign"></i> {{ product.price }}</h4>
                             </div>
                         </div>
